--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_admin_scaffold: ^1.3.0
-  file_picker: ^8.0.6
   http: ^1.2.2
   cloudinary_public: ^0.23.1
-
+  flutter_riverpod: ^2.5.1
+  image_picker: ^1.1.2
+  file_picker: ^8.1.2
+  shared_preferences: ^2.3.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
